fixed up media queries to make sure header text and logo are properly aligned, played around with font-sizes, mostly just experimenting to make sure the page looks nice on different dimensions and devices

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-
-
-
-
 @font-face {
     font-family: 'norsebold';
     src: url('images/fonts/webfontkit-20221006-170502/norse-bold-webfont.woff2') format('woff2'),
@@ -26,16 +22,21 @@ img {
 
 
 .header-containers { 
-    background-color: rgb(87, 102, 187);
+    /* background-color: rgb(87, 102, 187); */
+    background-color: rgb(8, 8, 109);
     display: flex; 
     flex-direction: column;  
     justify-content: flex-start;
     font-size: 40px; 
     font-family: 'norsebold';
+    color: rgb(196, 178, 178); 
+    width: auto; 
+    height: auto; 
 } 
 
 .have-an-account-login-container{ 
-    background-color: rgb(87, 102, 187);
+    /* background-color: rgb(87, 102, 187); */ 
+    background-color: rgb(8, 8, 109);
     display: flex; 
     justify-content: center; 
     align-content: flex-end;
@@ -44,39 +45,42 @@ img {
     /* margin-top: 40px;  */
     padding: 10px; 
     position: relative; 
+    /* top: 17em;  */
     top: 4em; 
+    /* bottom: 4em;  */
+    color: rgb(196, 178, 178); 
 } 
 
 .names-container { 
     display: flex; 
     justify-content: center; 
-    gap: 80px; 
+    gap: 120px; 
     font-size: 25px; 
     font-family: 'norsebold'; 
     position: relative; 
-    bottom: 2em; 
+    /* bottom: 2em;  */
 }
 
 
 .e-mail-phone-container { 
     display: flex; 
     justify-content: center;
-    gap: 80px; 
+    gap: 120px; 
     font-size: 25px;
     font-family: 'norsebold';
     position: relative; 
-    bottom: 2.4em; 
+    /* bottom: 2.4em;  */
 }
 
 .password-container { 
     display: flex; 
     justify-content: center; 
     /* gap: 10em;  */
-    gap: 80px; 
+    gap: 120px; 
     font-size: 25px; 
     font-family: 'norsebold'; 
     position: relative; 
-    bottom: 2.9em; 
+    /* bottom: 2.9em;  */
 }
  
 
@@ -133,10 +137,10 @@ img {
     background-color: white;
     color: black; 
     border-radius: 8%; 
-    width: 35%; 
+    /* width: 35%;  */
     height: 35%; 
     position: relative; 
-    bottom: 3.2em; 
+    /* bottom: 3.2em;  */
 }
 
 .create-account-btn:hover { 
@@ -224,7 +228,7 @@ input[type=text] {
  } */ 
 
 
- @media (max-width: 1163px) { 
+ @media (max-width: 1413px) { 
  .names-container { 
     /* display: block;  */
     display: flex;
@@ -237,7 +241,7 @@ input[type=text] {
  }
  } 
 
- @media (max-width: 1163px) { 
+ @media (max-width: 1413px) { 
     .password-container { 
        /* display: block;  */ 
        flex-direction: row; 
@@ -250,7 +254,7 @@ input[type=text] {
     }
     } 
 
-    @media (max-width: 1163px) { 
+    @media (max-width: 1413px) { 
         .e-mail-phone-container { 
            /* display: block;  */
            flex-direction: row; 
@@ -319,7 +323,7 @@ input[type=text] {
 
 
 
-    @media (max-width: 1163px) {
+    @media (max-width: 1413px) {
     #left-containers { 
         display: block; 
         position: relative; 
@@ -328,7 +332,7 @@ input[type=text] {
     }
 }
 
-@media (max-width: 1163px) {
+@media (max-width: 1413px) {
     #right-containers { 
    width: 100%; 
    height: 100%; 
@@ -336,20 +340,36 @@ input[type=text] {
     }
 } 
 
+@media (max-width: 722px) { 
+    img { 
+        position: relative; 
+        left: 3em; 
+    }
+}
+
 @media (max-width: 580px) { 
     img { 
         width: 10em; 
         position: relative; 
-        left: 4em; 
+        right: 17em; 
+        /* left: 4em;  */
     }
 } 
+
+@media (max-width: 1413px) { 
+    .logo-text { 
+        position: relative; 
+        /* font-size: 13em; */
+        
+    }
+}
 
 @media (max-width: 580px) { 
     .logo-text { 
         font-size: 11em;
         position: relative;
-        top: 0.1em; 
-        left: 0.3em; 
+        /* top: 0.1em; 
+        left: 0.3em;  */
     }
 }
 
@@ -381,11 +401,11 @@ input[type=text] {
     /* height: auto; 
     width: auto;  */
     position: relative;
-    left: 4em; 
+    left: 1em; 
   }
   
   #message p {
-    font-size: 30px;
+    font-size: 35x;
     display: flex;
   }
   
@@ -402,7 +422,7 @@ input[type=text] {
   
   /* Add a red text color and an "x" icon when the requirements are wrong */
   .invalid {
-    color: red;
+    color: rgb(175, 38, 38);
   }
   
   .invalid:before {
@@ -483,5 +503,4 @@ body {
 
 
 
-/* Password validation  */ 
 
